11: FE add date pickers and refactor home page

--- a/fe/src/pages/Home/Home.module.scss
+++ b/fe/src/pages/Home/Home.module.scss
@@ -11,6 +11,10 @@ header {
     font-size: 3em;
     padding-bottom: .5em;
   }
+  .errorMessage {
+    text-align: center;
+    color: red;
+  }
 }
 
 .navList {
