--- a/fe/src/components/THotelList/THotelList.module.scss
+++ b/fe/src/components/THotelList/THotelList.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     flex-shrink: 1;
+    margin-top: 13em;
   
     .hotelListItem {
       display: flex;
