--- a/fe/src/components/TSearchBar/TSearchBar.module.scss
+++ b/fe/src/components/TSearchBar/TSearchBar.module.scss
@@ -1,3 +1,4 @@
+@import 'react-datepicker/dist/react-datepicker-cssmodules.css';
 @import '../../styles/variables.scss';
 
 .searchContainer {
@@ -7,7 +8,6 @@
     margin: 0 auto;
     padding-bottom: 2em;
   input {
-    width: 100%;
     height: 50px;
     border-radius: 5px;
     border: .1em solid;
@@ -17,19 +17,6 @@
     margin-right: 1em;
     &:focus {
       outline: none;
-    }
-  }
-  .searchButton{
-    background-color: $color-primary;
-    border-radius: 5px;
-    border: 1px none;
-    padding: 0 1em;
-    font-size: 20px;
-    &:focus {
-      outline: none;
-    }
-    &:hover {
-      background-color: $color-secondary;
     }
   }
 }
