21: add loading spinner when getting data

--- a/fe/src/pages/Home/Home.module.scss
+++ b/fe/src/pages/Home/Home.module.scss
@@ -31,3 +31,13 @@ header {
   }
 }
 
+.loadinggif{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 250px;
+    height: 250px;
+  }
+}
+
