--- a/fe/src/components/THotelList/THotelList.module.scss
+++ b/fe/src/components/THotelList/THotelList.module.scss
@@ -12,7 +12,7 @@
       margin-top: 2em;
       flex-direction: row;
       flex-shrink: 1;
-      border: 1px solid #000;
+      border: 1px solid $color-tertiary;
       width: 100%;
       border-radius: $primary-border-radius;
       justify-content: space-between;
