--- a/fe/src/components/TSearchBar/TSearchBar.module.scss
+++ b/fe/src/components/TSearchBar/TSearchBar.module.scss
@@ -7,6 +7,19 @@
     max-width: 50%;
     margin: 0 auto;
     padding-bottom: 2em;
+    justify-content: center;
+    align-items: center;
+    border-bottom: .1em solid;
+    border-color: $color-secondary;
+    margin-bottom: 2em;
+
+
+  label {
+    font-size: 20px;
+    color: $color-tertiary;
+    margin-right: 1em;
+  }
+  
   input {
     height: 50px;
     border-radius: 5px;
@@ -15,6 +28,7 @@
     font-size: 20px;
     border-color: $color-secondary;
     margin-right: 1em;
+    color: $color-tertiary;
     &:focus {
       outline: none;
     }
