--- a/fe/src/components/TSearchBar/TSearchBar.module.scss
+++ b/fe/src/components/TSearchBar/TSearchBar.module.scss
@@ -33,4 +33,16 @@
       outline: none;
     }
   }
+  select{
+    height: 50px;
+    border-radius: 5px;
+    border: .1em solid;
+    font-size: 20px;
+    border-color: $color-secondary;
+    color: $color-tertiary;
+    &:focus {
+      outline: none;
+    }
+  }
 }
+
