--- a/fe/src/pages/Home/Home.module.scss
+++ b/fe/src/pages/Home/Home.module.scss
@@ -38,6 +38,8 @@ header {
   justify-content: center;
   align-items: center;
   img {
+    position: fixed;
+    z-index: 100;
     width: 250px;
     height: 250px;
   }
